// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`web_search - Snapshot Tests > renders successful web search with results 1`] = `
"⚙ Search React documentation
  │  count: 3
  └─ Searched"
`;

exports[`web_search - Snapshot Tests > renders web search with many results 1`] = `
"⚙ Search TypeScript best practices
  │  count: 10
  └─ Searched"
`;

exports[`web_search - Snapshot Tests > renders web search with no results 1`] = `
"⚙ Search asdfjkl123xyz999
  └─ Searched"
`;

exports[`web_search - Snapshot Tests > renders web search with special characters in query 1`] = `
"⚙ Search C++ programming "best practices"
  └─ Searched"
`;
